--- a/Webex Api_Chatter_Bot.ipynb
+++ b/Webex Api_Chatter_Bot.ipynb
@@ -372,9 +372,9 @@
     "def send_messages():\n",
     "    url='https://webexapis.com/v1/messages'\n",
     "    request = list_messages()['items'][0]['text']\n",
-    "    cevap = bot.get_response(request)\n",
+    "    reply = bot.get_response(request)\n",
     "    payload = {'roomId':ROOM_ID,\n",
-    "              'text':f'{cevap}'}\n",
+    "              'text':f'{reply}'}\n",
     "    headers={'Authorization':f'Bearer {chatbot_apikey}',\n",
     "            'Content-Type':'application/json'}\n",
     "    response = requests.post(url,headers=headers,data=json.dumps(payload),verify=False)\n",
